--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="col-lg-5 pb-4 pb-lg-0">
                     <img class="img-fluid w-100" src="img/about.png" alt="">
                     <div class="bg-primary text-dark text-center p-4">
-                        <h3 class="m-0">1+ Años Experiencia</h3>
+                        <h3 class="m-0">Varios años de experiencia</h3>
                     </div>
                 </div>
                 <div class="col-lg-7">
@@ -100,7 +100,7 @@
                     <p class="mb-4">
                     <h3 class="m-0">CRIS & BOB EURO TRANS</h3>
                     es su socio de confianza en transporte y
-                    soluciones logísticas integrales. Con más de 1 año de experiencia en el sector, nos
+                    soluciones logísticas integrales. Con varios años de experiencia en el sector, nos
                     especializamos en trasladar sus mercancías de manera segura, puntual e íntegra a sus destinos,
                     ya sean nacionales o internacionales.</p>
                     <!-- <div class="d-flex align-items-center pt-2">
@@ -279,5 +279,6 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
