--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
                     <img class="img-fluid w-100" src="img/about.png" alt="">
-                    <div class="bg-primary text-dark text-center p-4">
+                    <!-- <div class="bg-primary text-dark text-center p-4">
                         <h3 class="m-0">Varios años de experiencia</h3>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-lg-7">
                     <h6 class="text-primary text-uppercase font-weight-bold">Sobre nosotros</h6>
@@ -282,3 +282,4 @@
 
 
 </html>
+
